# pdf-extenstion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  constants.py  error_handlers.py  exceptions.py  main.py
app/api/: dependencies.py  routes.py
app/auth/: auth.py  passwords.py
app/middleware/: __init__.py  access_log.py  rate_limiter.py  request_id.py
app/models/: schemas.py
app/services/: conversation.py  embedding_service.py  llm_service.py  pdf_service.py  rag_service.py  storage_paths.py  vector_store.py
app/utils/: pagination.py  retry.py  text.py  time_helpers.py
docs/: api.md  architecture.md  configuration.md  data_model.md  deployment.md  testing.md  troubleshooting.md
tests/: conftest.py  test_auth.py  test_chat_response.py  test_chunking.py  test_config.py  test_constants.py  test_conversation.py  test_exceptions.py  test_health_route.py  test_llm_prompt.py  test_pagination.py  test_passwords.py  test_prompt_caps.py  test_retry.py  test_schemas.py  test_storage_paths.py  test_text_utils.py  test_time_helpers.py
